--- a/index.html
+++ b/index.html
@@ -7,17 +7,48 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-part">
             <h1>Wlecome to</h1>
-            <h1><span class="name-highlite">Tanvin</span> website</h1>
+            <h1><span class="orange-highlite">Tanvin</span> website</h1>
             <h3>World class profesional web Developer</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt nostrum ea excepturi consequatur dolorum tempora animi quidem veniam atque eveniet deleniti voluptatum recusandae consequuntur, totam aperiam culpa vel eius beatae?</p>
-            <button type="button">Hire Me</button>
+            <a target="_blank" class="link-button" href="index.html">Hire me</a>
         </div>
         <div class="half-part">
             <img src="./img/jhankar.png" alt="">
         </div>
     </section>
+
+    <!-- dream area -->
+    <section class="dream-area">
+        <div class="half-part">
+            <img src="./img/jhankar2.png" alt="">
+        </div>
+        <div class="half-part">
+            <h1>Dream Big</h1>
+            <h3>World class web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla cum tempore ratione enim vero corporis, voluptatem dolorem! Assumenda, repellat temporibus blanditiis officia vero incidunt quis reiciendis iste nemo, ipsam qui.</p>
+            <a href="index.html" class="link-button">Download Resume</a>
+        </div>
+    </section>
+
+    <!-- experience area -->
+    <section class="experence-area">
+        <h1>Experiences</h1>
+        <div id="pro-web-dev" class="half-part single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange-highlite">2021-present | Pro Level Developer</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates voluptatem sit, eveniet officiis rem veritatis recusandae rerum nihil beatae amet! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, consectetur?</p>
+        </div>
+        <div id="baby-web-dev" class="half-part single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlite">2020-2021 | Programming Hero Learner</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, recusandae tempore adipisci enim ipsum expedita animi inventore mollitia placeat dolorem ad totam repellat. Minima, sunt dolore necessitatibus at magnam cumque?</p>
+        </div>
+    </section>
+    <footer>
+        <small>&copy; Copyright by Tanvin. All reserved</small>
+    </footer>
 </body>
 </html>
